--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,7 @@ matrix:
 #script:
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("BBI"); Pkg.test("BBI"; coverage=true)'
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("BBI")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("BBI")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia --project=coverage/ coverage/coverage.jl
 
 jobs:
   include:
